--- a/src/components/quoteLineEditor.component
+++ b/src/components/quoteLineEditor.component
@@ -43,6 +43,9 @@
 			            </table>
 		            </c:pageBlockSection>
 	            </div>
+
+	            <div> helloworld</div>
+	            <div> I'm here, too! </div>
 	            
 	            <div ng-repeat="group in editorModel.quote.lineItemGroups">
 	           		<c:pageBlockSection title="{{editorModel.quote.grouped ? group.record.Name : editorModel.linesSectionTitle}}" formFactor="{!formFactor}">
