Added new div to the component

--- a/src/components/quoteLineEditor.component
+++ b/src/components/quoteLineEditor.component
@@ -20,6 +20,8 @@
 	            <c:pageBlockHeader formFactor="{!formFactor}">
 	                <c:quoteLineEditorButtons quoteId="{!quoteId}" formFactor="{!formFactor}"/>
 	            </c:pageBlockHeader>
+
+	            <div> hi there! </div>
 	            
 	            <div class="pbBody">
 	            <div ng-show="editorModel.quoteFields.length > 0">
