--- a/src/components/quoteLineEditor.component
+++ b/src/components/quoteLineEditor.component
@@ -22,6 +22,9 @@
 	            </c:pageBlockHeader>
 
 	            <div> hi there! </div>
+	            <p> hello again </p>
+	            <p> hello again and again </p>
+	            <p> hello again and again and again</p>
 	            
 	            <div class="pbBody">
 	            <div ng-show="editorModel.quoteFields.length > 0">
